[package]
name = "saftladen"
version = "0.1.0"
edition = "2021"

[dependencies]
saftbar = { git = "https://github.com/alexd2580/saftbar.git" }
async-i3ipc = "0.7.0"
async-trait = "0.1.68"
chrono = "0.4.26"
futures = "0.3.28"
log = "0.4.19"
regex = "1.8.4"
simple_logger = "4.2.0"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
pulsectl-rs = "0.3.2"
sysinfo = "0.29.4"
