cabal-version:      2.4
name:               statbanana
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexander Dmitriev
maintainer:         alexander.dmitriev2580@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable statbanana
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Prelude, Base,
        State.I3, State.Ethernet, State.Weather, State.Load
        Utils.Types, Utils.Color, Utils.Time, Utils.Function, Utils.IO, Utils.MVar, Utils.Monad, Utils.Tuple, Utils.BiMultiMap,
        Update.I3, Update.Ethernet, Update.Weather, Update.Load, Utils.WindowTitle, Utils.List,
        Print.I3, Print.Time, Print.Ethernet, Print.Weather, Print.Load
        Lemonbar

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base, ghc,
        mtl, transformers, containers,
        text, vector, time, pretty-show,
        network, process, network-info, http-conduit, directory,
        i3ipc, X11, aeson
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Weverything
        -Wno-safe
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-inferred-safe-imports
        -Wno-unused-packages
        -Wno-missing-import-lists
        -Wno-partial-fields
        -Wno-all-missed-specialisations
